--- a/index.html
+++ b/index.html
@@ -27,79 +27,47 @@
 
       </nav>
 
-      <div id="Contentwrapper">
-        <!-- Button for changing language of site -->
-
-        <!-- Content of website in center of screen-->
-        <div id="Content">
-
-          <a href="index.html"><img src="Images/logoph.png"></a>
-          <p>
-            Lil’ B is an app for your phone. With Lil’ B you can learn how to write and read based on your own level.
-            Begin with choosing your language based on the flag and move on to choose the levels beginner, intermediate or advanced.
-          </p>
-        <div id="app">
-          <div id="downloads">
-            <div class="store">
-              <a href="http://www.apple.com/itunes/download/">
-                <img src="Images/store/apple.svg"/>
-              </a>
-            </div>
-            <div class="store">
-              <a href="https://play.google.com/store/apps">
-                <img src"Images/store/android.svg"/>
-              </a>
-            </div>
-            <div class="store">
-              <a href="https://www.microsoft.com/nb-no/store/apps/windows-phone">
-                <img src="Images/store/windows.svg"/>
-              </a>
+              <div id="Content">
+          <div class="app">
+            <div id="logo">
+              <img src="Images/logoph.png">
             </div>
           </div>
-          <div id="screen">
-              <img src="Images/placeholderss.png"/ style="max-width:200px;min-width:150px;width:auto;height:auto;"/>
-              <img src="Images/placeholderss.png"/ style="max-width:200px;min-width:150px;width:auto;height:auto;"/>
-              <img src="Images/placeholderss.png"/ style="max-width:200px;min-width:150px;width:auto;height:auto;"/>
+          <div class="app" id="lang">
+            <div class="text">
+              <p>TEST</p>
+            </div>
+            <div class="screenshot">
+              <img src="Images/screenshot/langmob.png"/>
+            </div>
+          </div>
+          <div class="app" id="bokstav">
+            <div class="text">
+              <p>TEST</p>
+            </div>
+            <div class="screenshot">
+              <img src="Images/screenshot/bokstavmob.png"/>
+            </div>
+          </div>
+          <div class="app" id="bil">
+            <div class="text">
+              <p>TEST</p>
+            </div>
+            <div class="screenshot">
+              <img src="Images/screenshot/bilmob.png"/>
+            </div>
+          </div>
+          <div id="download">
+            <div class="store">
+              <img src="Images/store/android/android.svg">
+              <img src="Images/store/apple/apple.svg">
+              <img src="Images/store/win/windows.svg">
+            </div>
+            <div class="text">
+              <p>TEST</p>
+            </div>
           </div>
         </div>
-
-        <div id="Verticals">
-          <div class="Vertical">
-            <div class="VerticalImg">
-              <a href="http://www.apple.com/itunes/download/">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/1/11/Available_on_the_App_Store_(gray).png"/>
-              </a>
-            </div>
-            <div class="VerticalApp">
-              <img src="Images/placeholderss.png"/ style="max-width:200px;min-width:150px;width:auto;height:auto;"/>
-            </div>
-          </div>
-
-          <div class="Vertical">
-
-            <div class="VerticalImg">
-              <a href="https://play.google.com/store/apps">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_Google_play.jpg"/>
-              </a>
-            </div>
-            <div class="VerticalApp">
-              <img src="Images/placeholderss.png"/ style="max-width:200px;min-width:150px;width:auto;height:auto;"/>
-            </div>
-          </div>
-
-          <div class="Vertical">
-            <div class="VerticalImg">
-              <a href="https://www.microsoft.com/nb-no/store/apps/windows-phone">
-                <img src="https://assets.onestore.ms/cdnfiles/external/uhf/long/9a49a7e9d8e881327e81b9eb43dabc01de70a9bb/images/microsoft-gray.png"/>
-              </a>
-            </div>
-            <div class="VerticalApp">
-              <img src="Images/placeholderss.png"/ style="max-width:200px;min-width:150px;width:auto;height:auto;"/>
-            </div>
-          </div>
-
-        </div>
-    </div>
         <!-- Footerbar in bottom of screen -->
         <footer>
 
