la til alt for allebilder i indeksen

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <div id="Button1" style="background-color: #33ff33;"><a href="index.html"><img src="http://hundesonen.no/uploads/monthly_2016_04/512.png.19f489143350d1986d36d7cea166a2ca.thumb.png.1361d0b91ae2b41e3f8cc7f4ebe631a2.png"</a></div>
             <div id="Button2" style="background-color: orange;"><a href="resources.html"><h1>Button2</h1></a></div>
             <div id="Button3" style="background-color: #6666ff;"><a href="about.html"><h1>Button3</h1></a></div>
-            <img src="http://www.vectortemplates.com/raster/batman/batman-logo-big.gif" id="Logo">
+            <img src="http://www.vectortemplates.com/raster/batman/batman-logo-big.gif" id="Logo" alt="Logo">
           </div>
           <!-- Languages -->
             <a href="index_ar.html">
-              <img id="Language" src="Images\arabic_language.png" />
+              <img id="Language" src="Images\arabic_language.png" alt="Arabic Language" />
             </a>
 
       </nav>
@@ -30,7 +30,7 @@
               <div id="Content">
           <div class="app">
             <div id="logo">
-              <img src="Images/logoph.png">
+              <img src="Images/logoph.png" alt="Logo">
             </div>
           </div>
           <div class="app" id="lang">
@@ -38,7 +38,7 @@
               <p>TEST</p>
             </div>
             <div class="screenshot">
-              <img src="Images/screenshot/langmob.png"/>
+              <img src="Images/screenshot/langmob.png" alt="Choosing Language"/>
             </div>
           </div>
           <div class="app" id="bokstav">
@@ -46,7 +46,7 @@
               <p>TEST</p>
             </div>
             <div class="screenshot">
-              <img src="Images/screenshot/bokstavmob.png"/>
+              <img src="Images/screenshot/bokstavmob.png" alt="Writing letters"/>
             </div>
           </div>
           <div class="app" id="bil">
@@ -54,14 +54,14 @@
               <p>TEST</p>
             </div>
             <div class="screenshot">
-              <img src="Images/screenshot/bilmob.png"/>
+              <img src="Images/screenshot/bilmob.png" alt="Identify objects"/>
             </div>
           </div>
           <div id="download">
             <div class="store">
-              <img src="Images/store/android/google-play-badge.svg">
-              <img src="Images/store/apple/Download_on_the_App_Store_Badge_US-UK_135x40.svg">
-              <img src="Images/store/win/English_get.svg">
+              <img src="Images/store/android/google-play-badge.svg" alt="Google Play">
+              <img src="Images/store/apple/Download_on_the_App_Store_Badge_US-UK_135x40.svg" alt="App Store">
+              <img src="Images/store/win/English_get.svg" alt="Windows Store">
             </div>
             <div class="text">
               <p>TEST</p>
@@ -79,24 +79,24 @@
               <tr class="imgs">
                 <td>
                   <a class="SocialIcon" href="https://www.facebook.com/">
-                  <img src="Images/social/Facebook.svg"/>
+                  <img src="Images/social/Facebook.svg" alt="Facebook"/>
                 </a>
                 </td>
                 <td>
                   <a class="SocialIcon" href="https://twitter.com/">
-                    <img style="width: 4em" src="Images/social/Twitter.svg"/>
+                    <img style="width: 4em" src="Images/social/Twitter.svg" alt="Twitter"/>
                   </a>
                 </td>
               </tr>
               <tr>
                 <td>
                   <a  href="https://snapchat.com/">
-                    <img class="SocialIcon" src="Images/social/Snapchat.svg"/>
+                    <img class="SocialIcon" src="Images/social/Snapchat.svg" alt="Snapchat"/>
                   </a>
                 </td>
                 <td>
                   <a  href="https://rss.com/">
-                    <img class="SocialIcon" src="Images/social/RSS%20feed.svg"/>
+                    <img class="SocialIcon" src="Images/social/RSS%20feed.svg" alt="RSS"/>
                   </a>
                 </td>
               </tr>
