Language image and text fix

--- a/index.html
+++ b/index.html
@@ -21,9 +21,18 @@
             <img src="http://www.vectortemplates.com/raster/batman/batman-logo-big.gif" id="Logo">
           </div>
           <!-- Languages -->
-            <a href="index_ar.html">
-              <img id="Language" src="Images\arabic_language.png" />
+          <div class="Language">
+          	<a href="index_ar.html">
+              <img id="Language" src="Images\syriskFlag.png" />
+              <h5>العربی</h5>
+              
             </a>
+          </div>
+          
+
+           <!-- <a href="index_ar.html">
+              <img id="Language" src="Images\arabic_language.png" />
+            </a> -->
 
       </nav>
 
