--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
             </div>
           </div>
         </div>
-        <!-- Footerbar in bottom of screen -->
+          
+          
+        <!-- vv Footer at bottom of screen vv -->
         <footer>
 
           <div id="Follow">
@@ -112,9 +114,13 @@
           </div>
 
           <div id="About">
-            <p>© 2016 Oslo and Akershus University College of Applied Sciences</p>
-            <a href="mailto:s309732@stud.hioa.no">Contact</a>
-            <p>Created by Yanislav, Julian, Ismail, Bas, Maria, Ida, Fawad, Jonas, Sahand and Irfan</p>
+            <p> 
+            <a href="mailto:s309732@stud.hioa.no?Subject=Question%20about%20LilB">Contact Us</a>
+            <br>
+            © 2016 Oslo and Akershus University College of Applied Sciences
+            <br>
+            Created by Yanislav, Julian, Ismail, Bas, Maria, Ida, Fawad, Jonas, Sahand and Irfan
+            </p>
           </div>
         </footer>
 
