--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
           <!-- Colorized Menu buttons left side -->
           <div id="Dropdown">
             <div id="Button1" style="background-color: #33ff33;"><a href="index.html"><img src="http://hundesonen.no/uploads/monthly_2016_04/512.png.19f489143350d1986d36d7cea166a2ca.thumb.png.1361d0b91ae2b41e3f8cc7f4ebe631a2.png"</a></div>
-            <div id="Button2" style="background-color: orange;"><a href="resources.html"><h1>Button2</h1></a></div>
-            <div id="Button3" style="background-color: #6666ff;"><a href="about.html"><h1>Button3</h1></a></div>
+            <div id="Button2" style="background-color: orange;"><a href="resources.html"><h1>Resources</h1></a></div>
+            <div id="Button3" style="background-color: #6666ff;"><a href="about.html"><h1>About us</h1></a></div>
             <img src="http://www.vectortemplates.com/raster/batman/batman-logo-big.gif" id="Logo" alt="Logo">
           </div>
           <!-- Languages -->
