--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class="Language">
           	<a href="index_ar.html">
               <img id="Language" src="Images\syriskFlag.png" alt="Arabic Language"/>
-              <h5>العربی</h5>
+              <h5>العربية</h5>
             </a>
           </div>
           
