Added bee banner

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <div id="Content">
           <div class="app">
             <div id="logo">
-              <img src="Images/logoph.png" alt="Logo">
+              <img src="Images/bannerBee.png" alt="Logo">
             </div>
           </div>
           <div class="app" id="lang">
