Made big bee into lil'l bee

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
             <div id="Button1" style="background-color: #33ff33;"><a href="index.html"><img src="http://hundesonen.no/uploads/monthly_2016_04/512.png.19f489143350d1986d36d7cea166a2ca.thumb.png.1361d0b91ae2b41e3f8cc7f4ebe631a2.png"</a></div>
             <div id="Button2" style="background-color: orange;"><a href="resources.html"><h1>Resources</h1></a></div>
             <div id="Button3" style="background-color: #6666ff;"><a href="about.html"><h1>About us</h1></a></div>
-            <img src="http://www.vectortemplates.com/raster/batman/batman-logo-big.gif" id="Logo" alt="Logo">
           </div>
           <!-- Languages -->
           <div class="Language">
@@ -37,7 +36,7 @@
 
               <div id="Content">
           <div class="app">
-            <div id="logo">
+            <div id="Logo">
               <img src="Images/bannerBee.png" alt="Logo">
             </div>
           </div>
