--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
               <img src="Images/screenshot/bilmob.png" alt="Identify objects"/>
             </div>
           </div>
-          <div id="download">
-            <div class="store">
+          <div class="app">
+            <div id="store">
               <img src="Images/store/android/google-play-badge.svg" alt="Google Play">
               <img src="Images/store/apple/Download_on_the_App_Store_Badge_US-UK_135x40.svg" alt="App Store">
               <img src="Images/store/win/English_get.svg" alt="Windows Store">
             </div>
             <div class="text">
-              <p>TEST</p>
+              <p></p>
             </div>
           </div>
         </div>
