--- a/index_arabic.html
+++ b/index_arabic.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Website created to accompany Syrian literacy app">
         <meta name="keywords" content="Syria, accessibility, literacy">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" type="text/css" href="style.css"/>
+        <link rel="stylesheet" type="text/css" href="style_arab.css"/>
     </head>
 
     <body style="background-color: #E9EBEE">
@@ -16,21 +16,17 @@
           <!-- Colorized Menu buttons left side -->
           <div id="Dropdown">
             <div id="Button1" style="background-color: #33ff33;"><a href="index.html"><img src="http://hundesonen.no/uploads/monthly_2016_04/512.png.19f489143350d1986d36d7cea166a2ca.thumb.png.1361d0b91ae2b41e3f8cc7f4ebe631a2.png"</a></div>
-            <div id="Button2" style="background-color: orange;"><a href="resources.html"><h1>Resources</h1></a></div>
-            <div id="Button3" style="background-color: #6666ff;"><a href="about.html"><h1>About us</h1></a></div>
+            <div id="Button2" style="background-color: orange;"><a href="resources.html"><h1>موارد</h1></a></div>
+            <div id="Button3" style="background-color: #6666ff;"><a href="about.html"><h1>معلومات عنا</h1></a></div>
           </div>
           <!-- Languages -->
           <div class="Language">
-          	<a href="index_arabic.html">
-              <img id="Language" src="Images\syriskFlag.png" alt="Arabic Language"/>
-              <h5>العربية</h5>
+          	<a href="index.html">
+              <img id="Language" src="Images\english_language.jpg" alt="English Language"/>
+              <h5>ENGLISH</h5>
             </a>
           </div>
-          
 
-           <!-- <a href="index_ar.html">
-              <img id="Language" src="Images\arabic_language.png" />
-            </a> -->
 
       </nav>
 
