Removed a lot of redundant CSS
Nested the css code better so we wont have to edit as much code as
before to do changes

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <nav>
           <!-- Colorized Menu buttons left side -->
           <div id="Dropdown">
-            <div id="Button1" style="background-color: #33ff33;"><a href="index.html"><img src="Images/LilB-small.png"</a></div>
-            <div id="Button2" style="background-color: orange;"><a href="resources.html"><h1>Resources</h1></a></div>
-            <div id="Button3" style="background-color: #6666ff;"><a href="about.html"><h1>About us</h1></a></div>
+            <div id="Button1"><a href="index.html"><img src="Images/LilB-small.png"</a></div>
+            <div id="Button2"><a href="resources.html"><h1>Resources</h1></a></div>
+            <div id="Button3"><a href="about.html"><h1>About us</h1></a></div>
           </div>
           <!-- Languages -->
           <div class="Language">
