Estetiske endringer på nav og footer

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
           <!-- Colorized Menu buttons left side -->
           <div id="Dropdown">
             <div id="Button1"><a href="index.html"><img src="Images/LilB-small.png"</a></div>
-            <div id="Button2"><a href="resources.html"><h1>Resources</h1></a></div>
-            <div id="Button3"><a href="about.html"><h1>About us</h1></a></div>
+            <a href="resources.html"><div id="Button2"><h1>Resources</h1></div></a>
+            <a href="about.html"><div id="Button3"><h1>About us</h1></div></a>
           </div>
           <!-- Languages -->
           <div class="Language">
