Fikset litt i filsystem og navning

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
           </div>
           <div class="app">
             <div id="store">
-              <img src="Images/store/android/google-play-badge.svg" alt="Google Play">
-              <img src="Images/store/apple/Download_on_the_App_Store_Badge_US-UK_135x40.svg" alt="App Store">
-              <img src="Images/store/win/English_get.svg" alt="Windows Store">
+              <img src="Images/store/android/playstoreeng.svg" alt="Google Play Store">
+              <img src="Images/store/apple/appstoreeng.svg" alt="Apple App Store">
+              <img src="Images/store/win/wineng.svg" alt="Windows Store">
             </div>
             <div class="text">
               <p></p>
