Ryddet litt og fiksa på navna til store svgene

--- a/index_arabic.html
+++ b/index_arabic.html
@@ -62,9 +62,9 @@
           </div>
           <div class="app">
             <div id="store">
-              <img src="Images/store/android/arabic-google-play-badge.svg" alt="Google Play">
-              <img src="Images/store/apple/Download_on_the_App_Store_Badge_US-UK_135x40.svg" alt="App Store">
-              <img src="Images/store/win/Arabic_get.svg" alt="Windows Store">
+              <img src="Images/store/android/playstorear.svg" alt="Google Play Store">
+              <img src="Images/store/apple/appstorear.svg" alt="Apple App Store">
+              <img src="Images/store/win/winar.svg" alt="Windows Store">
             </div>
             <div class="text">
               <p></p>
