Cropped away margin at images, added text to main screen, and some other cosmetic changes

--- a/index.html
+++ b/index.html
@@ -26,8 +26,6 @@
               <h5>العربية</h5>
             </a>
           </div>
-
-
            <!-- <a href="index_ar.html">
               <img id="Language" src="Images\arabic_language.png" />
             </a> -->
@@ -42,7 +40,8 @@
           </div>
           <div class="app" id="lang">
             <div class="text">
-              <p>TEST</p>
+                <h5>Text text text</h5>
+              <p>TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </p>
             </div>
             <div class="screenshot">
               <img src="Images/screenshot/langmob.png" alt="Choosing Language"/>
