Added text to website and did minor changes in the css

--- a/index.html
+++ b/index.html
@@ -40,8 +40,16 @@
           </div>
           <div class="app" id="lang">
             <div class="text">
-                <h5>Text text text</h5>
-              <p>TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </p>
+                <h2>Welcome to Lil B’! </h2>
+<ul>
+	<li>Lil B’ is an app created to help children learn numbers, letters and elementary math and more in fun and easy way!</li>
+	<li>Games are designed for children up from 2 years old; [For kids of all ages!]</li>
+	<li>It consists of 6 fun and educational mini-games which makes it possible for children to progress at their own pace;</li>
+	<li>3 levels of difficultly are available to match needs and abilities of children in different age groups;</li>
+	<li>With Lil B’ your child will be able to build a strong foundation for reading, writing and math skills!</li>
+	<li>Helps develop motor skills, attention and memory!</li>
+	<li>All games and levels are accessible absolutely free!</li>
+</ul>
             </div>
             <div class="screenshot">
               <img src="Images/screenshot/langmob.png" alt="Choosing Language"/>
@@ -49,7 +57,16 @@
           </div>
           <div class="app" id="bokstav">
             <div class="text">
-              <p>TEST</p>
+                <h2>Features</h2>
+              <ul>
+	<li>Lil B’ is an app created to help children learn numbers, letters and elementary math and more in fun and easy way!</li>
+	<li>Games are designed for children up from 2 years old; [For kids of all ages!]</li>
+	<li>It consists of 6 fun and educational mini-games which makes it possible for children to progress at their own pace;</li>
+	<li>3 levels of difficultly are available to match needs and abilities of children in different age groups;</li>
+	<li>With Lil B’ your child will be able to build a strong foundation for reading, writing and math skills!</li>
+	<li>Helps develop motor skills, attention and memory!</li>
+	<li>All games and levels are accessible absolutely free!</li>
+</ul>
             </div>
             <div class="screenshot">
               <img src="Images/screenshot/bokstavmob.png" alt="Writing letters"/>
@@ -57,7 +74,15 @@
           </div>
           <div class="app" id="bil">
             <div class="text">
-              <p>TEST</p>
+                <h2>6-mini games</h2>
+             <ul>
+	<li>Matching Shapes and Colors</li>
+	<li>Learning Numbers and Counting </li>
+	<li>Learning Alphabet</li>
+	<li>Learning names of Bugs, Animals, Flowers, Vehicles and Weather</li>
+	<li>Spelling (4 main themes: Animals, Flowers, Vehicles and Weather)</li>
+	<li>Learning Elementary Math (addition and subtraction)</li>
+</ul>
             </div>
             <div class="screenshot">
               <img src="Images/screenshot/bilmob.png" alt="Identify objects"/>
