Changed banner and background color

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="style.css"/>
     </head>
 
-    <body style="background-color: #E9EBEE">
+    <body style="background-color: #d8fcdc">
 
       <nav>
           <!-- Colorized Menu buttons left side -->
