--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <div id="Content">
           <div class="app">
             <div id="Logo">
-              <img src="Images/bannerBee.png" alt="Logo">
+              <img src="Images/Lil-B-Banner-MM-6.png" alt="Logo">
             </div>
           </div>
           <div class="app" id="lang">
