--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       </nav>
 
-              <div id="Content">
+        <div id="Content">
           <div class="app">
             <div id="Logo">
               <img src="Images/Lil-B-Banner-MM-6.png" alt="Logo">
@@ -145,6 +145,14 @@
               </tr>
             </table>
           </div>
+          <div id="footerLanguage">
+            <a href="index_arabic.html">
+              <h5>العربية</h5>
+            </a>
+             <a href="#">
+              <h5>ENGLISH</h5>
+            </a>
+        </div>
 
         </div>
 
