Adjusted position of textboxes and screenshots

--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
 	<li>All games and levels are accessible absolutely free!</li>
 </ul>
             </div>
-            <div class="screenshot">
-              <img src="Images/screenshot/langmob.png" alt="Choosing Language"/>
-            </div>
+              <img class="screenshot" src="Images/screenshot/langmob.png" alt="Choosing Language"/>
           </div>
           <div class="app" id="bokstav">
             <div class="text">
@@ -68,9 +66,7 @@
 	<li>All games and levels are accessible absolutely free!</li>
 </ul>
             </div>
-            <div class="screenshot">
-              <img src="Images/screenshot/bokstavmob.png" alt="Writing letters"/>
-            </div>
+              <img class="screenshot" src="Images/screenshot/bokstavmob.png" alt="Writing letters"/>
           </div>
           <div class="app" id="bil">
             <div class="text">
@@ -84,9 +80,7 @@
 	<li>Learning Elementary Math (addition and subtraction)</li>
 </ul>
             </div>
-            <div class="screenshot">
-              <img src="Images/screenshot/bilmob.png" alt="Identify objects"/>
-            </div>
+              <img class="screenshot" src="Images/screenshot/bilmob.png" alt="Identify objects"/>
           </div>
           <div class="app">
             <div id="store">
