--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           </div>
           <!-- Languages -->
           <div class="Language">
-          	<a href="index_arabic.html">
+          	<a href="index_arabicNEW.html">
               <img id="Language" src="Images\syriskFlag.png" alt="Arabic Language"/>
               <h5>العربية</h5>
             </a>
@@ -137,7 +137,7 @@
             </table>
           </div>
           <div id="footerLanguage">
-            <a href="index_arabic.html">
+            <a href="index_arabicNEW.html">
               <h5>العربية</h5>
             </a>
              <a href="#">
