Ferdig med dropdown

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <a href="index_arabicNEW.html">
             <div class="Language">
                  <img id="Language" src="Images\syriskFlag.png" alt="Arabic Language"/>
+                 <h5>العربية</h5>
             </div>
           </a>
           </li>
