--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
           <!-- Languages -->
           <li class="Language">
             <a href="index_arabicNEW.html">
-            <div class="Language">
-                 <img id="Language" src="Images\syriskFlag.png" alt="Arabic Language"/>
-                 <h5>العربية</h5>
+            <div class="Language" id="flag">
+              <h5>العربية</h5>
+              <img id="Language" src="Images\syriskFlag.png" alt="Arabic Language"/>
+              <h1 id="arabic">Language: العربية</h5>
             </div>
           </a>
           </li>
